# VoltFlow

./: CMakeLists.txt  DetailRow.qml  EnergyCore.qml  InfoCard.qml  Main.qml  MenuButton.qml  MetricItem.qml  MetricPanel.qml  README.md  RecommendCard.qml  ResourceCard.qml  ResourceRow.qml  SideBar.qml  TaskData.qml  TaskDetail.qml  TaskDialog.qml  TaskManager.cpp  TaskManager.h  Taskcard.qml  TopBar.qml  View_Main.qml  View_Set.qml  View_Store.qml  View_Task.qml  main.cpp
